Fix not to collapse display of input[type=file] in chrome

--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -27,6 +27,7 @@ $checkbox-margin: 7px 2px 7px 0px;
   input[type="text"],
   input[type="password"],
   input[type="date"],
+  input[type="file"],
   select,
   textarea {
     background-color: $color-input-bg;
